--- a/templates/login.html
+++ b/templates/login.html
@@ -132,7 +132,7 @@
 </head>
 <body>
     <div class="header-container">
-        <h2 class="header-title">Bienvenue sur Crunchtime</h2>
+        <h2 class="header-title">Bienvenue sur Crunchtime Management</h2>
     </div>
 
     <div class="login-container">
